5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4181/executions/1716_2499.log
== SUBMITION (2019-05-16 01:36:46) 
-- CODE:
import math
n = int(input())
somatorio = 1
cont = 1
if(n==1):
    print(round(somatorio,8))
else:
    while(1):
        somatorio += 1/math.factorial(cont)
        cont = cont + 1
        if(cont == n):
            break
print(round(somatorio,8))8
-- EXECUTION TIME:
0.156166
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 13
    print(round(somatorio,8))8
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:36:56) 
-- CODE:
import math
n = int(input())
somatorio = 1
cont = 1
if(n==1):
    print(round(somatorio,8))
else:
    while(1):
        somatorio += 1/math.factorial(cont)
        cont = cont + 1
        if(cont == n):
            break
print(round(somatorio,8))8
-- EXECUTION TIME:
0.15989
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 13
    print(round(somatorio,8))8
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:36:56) 
-- CODE:
import math
n = int(input())
somatorio = 1
cont = 1
if(n==1):
    print(round(somatorio,8))
else:
    while(1):
        somatorio += 1/math.factorial(cont)
        cont = cont + 1
        if(cont == n):
            break
print(round(somatorio,8))8
-- EXECUTION TIME:
0.147242
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 13
    print(round(somatorio,8))8
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:37:10) 
-- CODE:
import math
n = int(input())
somatorio = 1
cont = 1
if(n==1):
    print(round(somatorio,8))
else:
   while(1):
       somatorio += 1/math.factorial(cont)
       cont = cont + 1
       if(cont == n):
           break
print(round(somatorio,8))8
-- EXECUTION TIME:
0.144714
-- ERROR:
  File "/home/codebench/codes/1716/2499/main.py", line 13
    print(round(somatorio,8))8
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 01:37:13) 
-- CODE:
import math
n = int(input())
somatorio = 1
cont = 1
if(n==1):
    print(round(somatorio,8))
else:
   while(1):
       somatorio += 1/math.factorial(cont)
       cont = cont + 1
       if(cont == n):
           break
print(round(somatorio,8))8
-- ERROR:
File "XXXX", line 13
    print(round(somatorio,8))8
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 01:37:26) 
-- CODE:
import math
n = int(input())
somatorio = 1
cont = 1
if(n==1):
    print(round(somatorio,8))
else:
   while(1):
       somatorio += 1/math.factorial(cont)
       cont = cont + 1
       if(cont == n):
           break
print(round(somatorio,8))
-- EXECUTION TIME:
0.176644
-- TEST CASE 1:
---- input:
7
---- correct output:
2.71805556
---- user output:
2.71805556
-- TEST CASE 2:
---- input:
15
---- correct output:
2.71828183
---- user output:
2.71828183
-- TEST CASE 3:
---- input:
6
---- correct output:
2.71666667
---- user output:
2.71666667
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
